# krtools

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/krtools/: __init__.py  __main__.py  conf.py
src/krtools/sqltools/: __init__.py  __main__.py  build.py  callbacks.py  create.py
src/models/: __init__.py
src/models/movielens/: __init__.py  orm.py
src/models/mypostgres/: __init__.py  movielens.py
tests/: .test.env  conftest.py  test_console.py
tests/data/: movies_test.csv
tests/sqltools/: sqltools_fixtures.py  test_sqltools_console.py  test_sqltools_create.py  test_sqltools_read.py
