[tool.poetry]
name = "krtools"
version = "0.1.0"
description = ""
authors = ["Kevin Riley <kp.riley@icloud.com>"]
readme = "README.md"

[tool.poetry.scripts]
krtools = "krtools.__main__:app"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.9"
pydantic = {extras = ["all"], version = "^1.10.7"}
typer = {extras = ["all"], version = "^0.9.0"}
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
csvreader = "^0.0.4"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.3.1"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests", "integration"]
env_files = [".test.env"]